--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.8.1",
     "graphql": "^14.4.2",
+    "graphql-import": "^0.7.1",
     "lowdb": "^1.0.0"
   },
   "devDependencies": {
