--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
     "graphql-scalars": "^1.0.1",
+    "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0"
   },
   "devDependencies": {
